feat(config): standardize manifest naming convention
Establish naming convention for manifest and output files:
<FirstName>_<LastName>_<Company>_<Role>_Resume.<ext>

Changes:
- Update jd-prompt.md with naming convention in workflow stages
- Update manifest-composer skill with example filename
- Update CLAUDE-CONTEXT.md repository layout and examples
- Update README.md usage documentation and examples
- Update engine.py docstring and CLI help text
- Add missing skills to data/skills.yaml (r, numpy, keras, pytorch,
  tidyverse, git, aws) for JD keyword coverage
- Add Payson Data Scientist manifest using new convention

--- a/data/skills.yaml
+++ b/data/skills.yaml
@@ -1,6 +1,7 @@
 languages:
   - javascript
   - python
+  - r
   - sql
   - typescript
 
@@ -10,14 +11,18 @@ frameworks:
   - dbt
   - fastapi
   - framer-motion
+  - keras
   - next.js
+  - numpy
   - pandas
   - pydantic
+  - pytorch
   - react
   - scikit-learn
   - tailwindcss
   - tensorflow
   - textual
+  - tidyverse
   - vite
   - xgboost
 
@@ -32,6 +37,7 @@ tools:
   - anthropic
   - biome
   - docker
+  - git
   - github-actions
   - google-genai
   - husky
@@ -46,6 +52,7 @@ tools:
   - vitest
 
 platforms:
+  - aws
   - ios
   - sentry
   - vercel
