feat(workflow): add gap analysis and build summary to resume pipeline
- Update jd-prompt.md with structured gap analysis output format
- Add Stage 3 (Gap Analysis) with content matching tables
- Add Stage 10 (Build Summary) with JD alignment reporting
- Include single-page PDF enforcement workflow
- Add skills: mysql, excel, power-bi, tableau, apache-spark, apache-kafka
- Add 13 new resume manifests for various job applications

--- a/data/skills.yaml
+++ b/data/skills.yaml
@@ -28,6 +28,7 @@ frameworks:
 
 databases:
   - duckdb
+  - mysql
   - postgresql
   - redis
   - sqlite
@@ -35,8 +36,11 @@ databases:
 
 tools:
   - anthropic
+  - apache-kafka
+  - apache-spark
   - biome
   - docker
+  - excel
   - git
   - github-actions
   - google-genai
@@ -45,9 +49,11 @@ tools:
   - openai
   - playwright
   - pnpm
+  - power-bi
   - pre-commit
   - pytest
   - ruff
+  - tableau
   - uv
   - vitest
 
