chore(config): remove job-specific manifests from tracking
- Add config/*.yaml to .gitignore (manifests are regenerable)
- Preserve directory structure via .gitkeep
- Add bigquery and nosql to skills.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ build/
 drafts/*
 !drafts/.gitkeep
 
+# Job-specific manifests (regenerable from JD + content)
+config/*.yaml
+!config/.gitkeep
+
 # IDE and editor
 .idea/
 .vscode/
