--- a/data/skills.yaml
+++ b/data/skills.yaml
@@ -1,9 +1,11 @@
 languages:
+  - bash
   - javascript
   - python
   - r
   - sql
   - typescript
+  - vba
 
 frameworks:
   - capacitor
@@ -11,6 +13,7 @@ frameworks:
   - dbt
   - fastapi
   - framer-motion
+  - graphql
   - keras
   - next.js
   - numpy
@@ -27,8 +30,10 @@ frameworks:
   - xgboost
 
 databases:
+  - bigquery
   - duckdb
   - mysql
+  - nosql
   - postgresql
   - redis
   - sqlite
@@ -45,6 +50,7 @@ tools:
   - github-actions
   - google-genai
   - husky
+  - kubernetes
   - mypy
   - openai
   - playwright
