content(skills): add snowflake and jira to skills inventory
- Add snowflake to databases section
- Add jira to tools section

Both are standard industry tools used in daily workflows.

--- a/data/skills.yaml
+++ b/data/skills.yaml
@@ -36,6 +36,7 @@ databases:
   - nosql
   - postgresql
   - redis
+  - snowflake
   - sqlite
   - supabase
 
@@ -50,6 +51,7 @@ tools:
   - github-actions
   - google-genai
   - husky
+  - jira
   - kubernetes
   - mypy
   - openai
